--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+
+body {
+    margin: 0;
+    background-image: url("./assets/images/background-manga.png"),
+    url("./assets/images/background-tomo.png");
+    background-size: contain, contain;
+    background-position: left center, right center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/*@media only screen and (min-width: 1200px) {*/
+/*    body {*/
+/*        background-image: url("./assets/images/background-manga.png"),*/
+/*        url("./assets/images/background-spirited.png"),*/
+/*        url("./assets/images/background-tomo.png");*/
+/*        background-size: contain;*/
+/*        background-position: left center, right center, right center;*/
+/*        background-repeat: no-repeat;*/
+/*        background-attachment: fixed;*/
+/*    }*/
+/*}*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html {
+    min-height: 100vh;
 }
