--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -36,8 +36,9 @@
   width: 30px;
   height: 30px;
   fill: #161616;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
   &:hover {
+    transform: scale(1.1);
     fill: variables.$accent-font-color;
   }
 }
