--- a/src/styles/manga_item.module.scss
+++ b/src/styles/manga_item.module.scss
@@ -8,6 +8,10 @@
   text-decoration: none;
   color: #161616;
   width: 250px;
+  transition: all 0.3s ease-in-out;
+  &:hover{
+    box-shadow: 0 0 15px rgba(143, 190, 213, 0.66);
+  }
 }
 
 .img_wrap {
@@ -59,6 +63,7 @@
 .genre {
   transition: all 0.1s ease-in-out;
   @include variables.hover-underline();
+  text-transform: uppercase;
 }
 
 .genres {
