--- a/src/styles/manga_progress_bar.module.scss
+++ b/src/styles/manga_progress_bar.module.scss
@@ -4,8 +4,11 @@
   margin-top: 10px;
   background-color: #e3e3e3;
   border-radius: 5px;
+  position: relative;
+  height: 40px;
 }
 .progress_bar_fill {
+  height: 100%;
   border-radius: 5px;
   background-color: variables.$accent-font-color;
 }
@@ -19,9 +22,12 @@
 }
 
 .progress {
+  position: absolute;
   font-weight: 800;
   font-size: 16px;
   text-transform: uppercase;
   color: #ffffff;
-  padding: 10px;
+  top: 25%;
+  bottom: 25%;
+  left: 5px;
 }
