--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,38 +1,57 @@
 @use "variables";
 
-
 .go_home {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 .logo {
-    height: 40px;
+  height: 40px;
 }
+
 .header {
-    @include variables.dispFlex();
-    @include variables.align-items(center);
-    height: 80px;
-    box-sizing: border-box;
-    box-shadow: 0 0 30px #90BFD7;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.6);
-    margin-bottom: 50px;
+  @include variables.dispFlex();
+  @include variables.align-items(center);
+  height: 80px;
+  box-sizing: border-box;
+  box-shadow: 0 0 30px #90BFD7;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 50px;
 }
+
 .nav_list {
-    @include variables.dispFlex();
-    gap: 40px;
+  @include variables.dispFlex();
+  gap: 40px;
 }
+
 .nav_list_item {
 
 }
+
 .nav_list_link {
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    text-transform: uppercase;
-    color: #161616;
-    @include variables.hover-underline();
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  color: #161616;
+  @include variables.hover-underline();
 }
 
+.burger {
+  display: none;
+}
+
+@media only screen and (max-width: 1200px) {
+  .nav {
+    display: none;
+  }
+  .burger {
+    border: 0;
+    outline: 0;
+    background-color: transparent;
+    display: block;
+  }
+}
 
