--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,3 +14,10 @@
 body {
   font-family: "Mulish", sans-serif;
 }
+
+@media only screen and (max-width: 1200px) {
+  .wrapper {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
