--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -23,3 +23,11 @@
     color: variables.$accent-font-color;
   }
 }
+
+
+@media only screen and (max-width: 1200px){
+  .title {
+    width: 100%;
+    font-size: 35px;
+  }
+}
