Add mobile manga page

--- a/src/styles/manga_page.module.scss
+++ b/src/styles/manga_page.module.scss
@@ -6,3 +6,19 @@
   @include variables.align-items(flex-start);
   gap: 20px;
 }
+
+
+@media only screen and (max-width: 500px){
+  .wrapper {
+    @include variables.flex-direction-column(column);
+  }
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .wrapper {
+  background-color: rgba(255, 255, 255, 0.6);
+    padding: 10px;
+    border-radius: 10px;
+  }
+}
