--- a/src/styles/manga_page_aside.module.scss
+++ b/src/styles/manga_page_aside.module.scss
@@ -2,11 +2,23 @@
 
 .aside {
   flex: 1;
+  width: 50%;
+
+  @media only screen and (max-width: 800px) {
+    width: 30%;
+  }
+  @media only screen and (max-width: 500px) {
+    width: 100%;
+  }
 }
 
-.cover{
-    max-width: 400px;
-    border-radius: 10px;
+.cover {
+  width: 100%;
+  border-radius: 10px;
+
+  @media only screen and (max-width: 500px) {
+    width: 100%;
+  }
 }
 
 .list_title {
@@ -25,4 +37,18 @@
   letter-spacing: 0.05em;
   line-height: 120%;
   color: #161616;
+}
+
+
+@media only screen and (max-width: 500px) {
+  .list_title {
+    margin: 0;
+  }
+  .infoStyle {
+    margin: 10px 0;
+    @include variables.dispFlex();
+    @include variables.flex-direction-row(row);
+    @include variables.align-items(center);
+    @include variables.justify-content(space-between);
+  }
 }
