--- a/src/styles/manga_page_main.module.scss
+++ b/src/styles/manga_page_main.module.scss
@@ -2,6 +2,7 @@
 
 .main_content {
   flex: 2;
+
 }
 
 .title {
@@ -13,6 +14,12 @@
   text-transform: uppercase;
   color: #161616;
   margin: 20px 0;
+  @media only screen and (max-width: 1000px) {
+    font-size: 45px;
+  }
+  @media only screen and (max-width: 650px) {
+    font-size: 35px;
+  }
 }
 .list {
   @include variables.dispFlex();
@@ -24,6 +31,7 @@
   color: #161616;
   margin-bottom: 20px;
   gap: 10px;
+  flex-wrap: wrap;
 }
 
 .list_title {
